Clean ignored build artifacts and fixed pom dependency structure

--- a/analytics-service/pom.xml
+++ b/analytics-service/pom.xml
@@ -11,6 +11,13 @@
         <version>1.0.0</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+    </dependencies>
+
     <artifactId>analytics-service</artifactId>
     <packaging>jar</packaging>
 
