--- a/employee-service/pom.xml
+++ b/employee-service/pom.xml
@@ -15,7 +15,7 @@
     <name>Employee Service</name>
 
     <dependencies>
-        <!-- Spring Boot core -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -26,6 +26,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.32</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
         </dependency>
 
         <dependency>
@@ -43,13 +48,11 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
-        <!-- PostgreSQL driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
 
-        <!-- Common shared lib -->
         <dependency>
             <groupId>com.certiflow</groupId>
             <artifactId>common-libs</artifactId>
