--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>1.5.5.Final</version>
+            </dependency>
         </dependencies>
+
+
     </dependencyManagement>
 
     <build>
